--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,5 @@
 [tox]
-envlist = py36, py37, py38, lint, format, typecheck
-
-[travis]
-python =
-    3.8: py38
-    3.7: py37
-    3.6: py36
+envlist = lint, format, typecheck
 
 [testenv:lint]
 basepython = python
@@ -18,14 +12,6 @@ commands = pipenv run invoke format --check
 [testenv:typecheck]
 basepython = python
 commands = pipenv run invoke type-check
-
-[testenv:codecov]
-passenv = CI TRAVIS TRAVIS_* CODECOV_TOKEN
-basepython = python
-deps =
-    pipenv
-    codecov
-commands_post = pipenv run codecov
 
 [testenv]
 setenv =
