fix bump2version replace syntax

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,11 +5,11 @@ tag = True
 
 [bumpversion:file:setup.py]
 search = version = "{current_version}"
-replace = {new_version}
+replace = version = "{new_version}"
 
 [bumpversion:file:grpc_web_proto_compile/__init__.py]
 search = __version__ = "{current_version}"
-replace = {new_version}
+replace = __version__ = "{new_version}"
 
 [bdist_wheel]
 universal = 1
