--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,17 +3,20 @@ name: test
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.6, 3.7, 3.8]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python }}
-      - run: pip install tox wheel
-      - name: Test
-        run: tox
-      - uses: codecov/codecov-action@v1
+    build:
+        runs-on: ubuntu-latest
+        strategy:
+            fail-fast: false
+            matrix:
+                python: [3.6, 3.7, 3.8]
+        steps:
+            - uses: actions/checkout@v2
+            - uses: actions/setup-python@v2
+              with:
+                  python-version: ${{ matrix.python }}
+            - run: |
+                pip install --upgrade pip
+                pip install tox wheel
+            - name: Test
+              run: tox
+            - uses: codecov/codecov-action@v1
