--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,9 @@ jobs:
               with:
                   python-version: ${{ matrix.python }}
             - run: |
-                pip install --upgrade pip
-                pip install tox wheel
+                  pip install --upgrade pip setuptools
+                  pip --version
+                  pip install tox wheel
             - name: Test
               run: tox
             - uses: codecov/codecov-action@v1
