--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-commands_pre = pipenv install --clear --dev
+commands_pre = pip install --upgrade pip setuptools setuptools_rust && pipenv install --clear --dev
 commands = pipenv run invoke test
 
 
