install lots of backports

--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,9 @@ setenv =
 deps =
     pipenv
 commands_pre = 
-  pip install --upgrade pip setuptools setuptools_rust
-  pipenv install --clear --dev
+  pip install --upgrade pip setuptools setuptools_rust typed-ast dataclasses
+  pipenv install typed-ast dataclasses
+  pipenv install --dev
 commands = pipenv run invoke test
 
 
