add backports to pipfile

--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,7 @@ setenv =
 deps =
     pipenv
 commands_pre = 
-  pip install --upgrade pip setuptools setuptools_rust typed-ast dataclasses
-  pipenv install typed-ast dataclasses
+  pip install --upgrade pip setuptools setuptools_rust
   pipenv install --dev
 commands = pipenv run invoke test
 
